Debly to Heroku 001

--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "15f5c9be",
    "metadata": {},
    "outputs": [
@@ -365,20 +365,20 @@
        "[2495 rows x 72 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file = \"data.csv\"\n",
+    "file = \"./Resources/data.csv\"\n",
     "df = pd.read_csv(file)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9c64ed9e",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
        "[2495 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "10b776a5",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
        "[2495 rows x 27 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "d799afd6",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "e81191bf",
    "metadata": {},
    "outputs": [],
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "46f3f56b",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "2397c45c",
    "metadata": {},
    "outputs": [],
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "8437ad21",
    "metadata": {},
    "outputs": [
@@ -1191,6 +1191,7 @@
        "      <th>Q9</th>\n",
        "      <th>Q10</th>\n",
        "      <th>...</th>\n",
+       "      <th>gender</th>\n",
        "      <th>engnat</th>\n",
        "      <th>age</th>\n",
        "      <th>hand</th>\n",
@@ -1200,7 +1201,6 @@
        "      <th>voted</th>\n",
        "      <th>married</th>\n",
        "      <th>familysize</th>\n",
-       "      <th>SubType</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1217,6 +1217,7 @@
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>28</td>\n",
        "      <td>1</td>\n",
@@ -1226,7 +1227,6 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1241,6 +1241,7 @@
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>...</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>14</td>\n",
        "      <td>1</td>\n",
@@ -1250,7 +1251,6 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1266,6 +1266,7 @@
        "      <td>4</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>26</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1274,7 +1275,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1290,6 +1290,7 @@
        "      <td>5</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>25</td>\n",
        "      <td>1</td>\n",
        "      <td>12</td>\n",
@@ -1298,7 +1299,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1314,6 +1314,7 @@
        "      <td>5</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>37</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
@@ -1322,7 +1323,6 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1362,6 +1362,7 @@
        "      <td>4</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>32</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
@@ -1370,7 +1371,6 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2491</th>\n",
@@ -1386,6 +1386,7 @@
        "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>25</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -1394,7 +1395,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2492</th>\n",
@@ -1410,6 +1410,7 @@
        "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>34</td>\n",
        "      <td>1</td>\n",
        "      <td>12</td>\n",
@@ -1418,7 +1419,6 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2493</th>\n",
@@ -1433,6 +1433,7 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
@@ -1442,7 +1443,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2494</th>\n",
@@ -1458,6 +1458,7 @@
        "      <td>2</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>16</td>\n",
        "      <td>1</td>\n",
        "      <td>12</td>\n",
@@ -1466,44 +1467,43 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2492 rows × 28 columns</p>\n",
+       "<p>2492 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Q1  Q2  Q3  Q4  Q5  Q6  Q7  Q8  Q9  Q10  ...  engnat  age  hand  \\\n",
-       "0      5   5   3   5   5   5   5   3   4    5  ...       2   28     1   \n",
-       "1      5   5   5   5   5   3   5   5   1    4  ...       1   14     1   \n",
-       "2      2   4   1   2   2   2   4   2   2    4  ...       2   26     1   \n",
-       "3      5   4   1   2   4   5   4   1   4    5  ...       1   25     1   \n",
-       "4      5   4   1   4   4   5   4   3   1    5  ...       1   37     1   \n",
-       "...   ..  ..  ..  ..  ..  ..  ..  ..  ..  ...  ...     ...  ...   ...   \n",
-       "2490   5   2   2   2   4   4   2   2   1    4  ...       1   32     1   \n",
-       "2491   1   1   1   1   1   3   1   1   1    1  ...       2   25     2   \n",
-       "2492   5   5   1   5   5   5   5   1   3    1  ...       2   34     1   \n",
-       "2493   2   1   4   1   1   1   1   3   1    2  ...       2   19     1   \n",
-       "2494   4   4   5   4   4   4   4   5   2    2  ...       2   16     1   \n",
+       "      Q1  Q2  Q3  Q4  Q5  Q6  Q7  Q8  Q9  Q10  ...  gender  engnat  age  hand  \\\n",
+       "0      5   5   3   5   5   5   5   3   4    5  ...       1       2   28     1   \n",
+       "1      5   5   5   5   5   3   5   5   1    4  ...       2       1   14     1   \n",
+       "2      2   4   1   2   2   2   4   2   2    4  ...       2       2   26     1   \n",
+       "3      5   4   1   2   4   5   4   1   4    5  ...       1       1   25     1   \n",
+       "4      5   4   1   4   4   5   4   3   1    5  ...       1       1   37     1   \n",
+       "...   ..  ..  ..  ..  ..  ..  ..  ..  ..  ...  ...     ...     ...  ...   ...   \n",
+       "2490   5   2   2   2   4   4   2   2   1    4  ...       1       1   32     1   \n",
+       "2491   1   1   1   1   1   3   1   1   1    1  ...       2       2   25     2   \n",
+       "2492   5   5   1   5   5   5   5   1   3    1  ...       2       2   34     1   \n",
+       "2493   2   1   4   1   1   1   1   3   1    2  ...       1       2   19     1   \n",
+       "2494   4   4   5   4   4   4   4   5   2    2  ...       2       2   16     1   \n",
        "\n",
-       "      religion  orientation  race  voted  married  familysize  SubType  \n",
-       "0            2            1     5      2        1           1           \n",
-       "1            1            2     4      2        1           1           \n",
-       "2            1            1     4      1        1           2           \n",
-       "3           12            1     4      1        1           3           \n",
-       "4            2            2     4      2        2           2           \n",
-       "...        ...          ...   ...    ...      ...         ...      ...  \n",
-       "2490         2            1     4      2        1           3           \n",
-       "2491         2            1     4      1        1           2           \n",
-       "2492        12            2     5      0        2           2           \n",
-       "2493         1            1     4      1        1           2           \n",
-       "2494        12            3     4      2        1           1           \n",
+       "      religion  orientation  race  voted  married  familysize  \n",
+       "0            2            1     5      2        1           1  \n",
+       "1            1            2     4      2        1           1  \n",
+       "2            1            1     4      1        1           2  \n",
+       "3           12            1     4      1        1           3  \n",
+       "4            2            2     4      2        2           2  \n",
+       "...        ...          ...   ...    ...      ...         ...  \n",
+       "2490         2            1     4      2        1           3  \n",
+       "2491         2            1     4      1        1           2  \n",
+       "2492        12            2     5      0        2           2  \n",
+       "2493         1            1     4      1        1           2  \n",
+       "2494        12            3     4      2        1           1  \n",
        "\n",
-       "[2492 rows x 28 columns]"
+       "[2492 rows x 27 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "812ab437",
    "metadata": {},
    "outputs": [],
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "id": "9f510cb8",
    "metadata": {},
    "outputs": [],
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "id": "5c8c6267",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1568,7 @@
        "'N/A'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "id": "7d19607c",
    "metadata": {},
    "outputs": [],
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "id": "a2ffb35c",
    "metadata": {},
    "outputs": [
@@ -1938,7 +1938,7 @@
        "[2492 rows x 28 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1949,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "id": "31713792",
    "metadata": {},
    "outputs": [
@@ -1980,18 +1980,18 @@
        "GM-MG-ET-PW          7\n",
        "PW-CI                5\n",
        "MG-ET-PW-CI          4\n",
-       "GM-MG-ET             3\n",
-       "ET-PW-CI             3\n",
-       "ET-PW                3\n",
        "MG-PW                3\n",
+       "ET-PW-CI             3\n",
+       "GM-MG-ET             3\n",
+       "ET-PW                3\n",
        "MG-ET                2\n",
-       "GM-ET-PW             1\n",
        "MG-PW-CI             1\n",
+       "GM-ET-PW             1\n",
        "MG-ET-PW             1\n",
        "Name: SubType, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "id": "d18c4854",
    "metadata": {},
    "outputs": [],
@@ -2014,7 +2014,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
+   "id": "014012c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['education', 'urban', 'gender', 'engnat', 'age', 'hand', 'religion',\n",
+       "       'orientation', 'race', 'voted', 'married', 'familysize'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "041c580f",
    "metadata": {},
    "outputs": [],
@@ -2024,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "id": "301a6def",
    "metadata": {},
    "outputs": [],
@@ -2035,7 +2058,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
+   "id": "22154d19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = X_test.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "09e8c988",
    "metadata": {},
    "outputs": [],
@@ -2046,13 +2079,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 37,
    "id": "f11876ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Making predictions using the testing data.\n",
     "predictions = rf_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f328ac29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['N/A', 'N/A', 'N/A', 'N/A', 'N/A', 'N/A', 'N/A', 'N/A', 'N/A',\n",
+       "       'N/A', 'N/A', 'N/A', 'N/A', 'N/A', 'N/A', 'N/A', 'GM-MG-ET-PW-CI'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions[0:17]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "461caf44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>education</th>\n",
+       "      <th>urban</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>engnat</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hand</th>\n",
+       "      <th>religion</th>\n",
+       "      <th>orientation</th>\n",
+       "      <th>race</th>\n",
+       "      <th>voted</th>\n",
+       "      <th>married</th>\n",
+       "      <th>familysize</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    education  urban  gender  engnat  age  hand  religion  orientation  race  \\\n",
+       "17          2      1       1       1   19     1        12            1     4   \n",
+       "\n",
+       "    voted  married  familysize  \n",
+       "17      2        1           4  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.iloc[17].to_frame().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e508357c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1324          GM-CI\n",
+       "1826             CI\n",
+       "207             N/A\n",
+       "2454            N/A\n",
+       "1750    GM-MG-PW-CI\n",
+       "2314            N/A\n",
+       "2032             CI\n",
+       "2309            N/A\n",
+       "1647             CI\n",
+       "409             N/A\n",
+       "2265          GM-CI\n",
+       "1663             CI\n",
+       "19              N/A\n",
+       "1221            N/A\n",
+       "1469            N/A\n",
+       "2299            N/A\n",
+       "810             N/A\n",
+       "Name: SubType, dtype: object"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test[0:17]"
    ]
   },
   {
